# ostrovok_tests

./: .editorconfig  .gitignore  README.md  README_RU.md  config.local.env  config.personal.env  pyproject.toml
docs/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
docs/data/attachments/: 1e8c800028d78968.txt  27701ac422cb237e.txt  30e19b951f116492.html  44b0b190d4861354.txt  56c617f8c131b94d.txt  5b36bf80335d167e.json  67b281b665f98331.txt  67d5f21d74669602.html  6b4dbd18c1a9ec8.html  7aa7fd0ecfb84596.html  abb146b03b1176df.json  b2107e0ccb9a4425.txt  b2c9aa3bd5ed83d0.txt  b5834d319fcf388.json  c0266850f135fa96.txt  c4617f58014f1e82.html  d4a89b508fbd13c5.json  d5f321b79acbdb63.json  d926ac5ef769ef67.txt  de07ac426514ecf0.json  e95cebd64910b877.txt  febbb3d66a6cd514.txt  ffc8ff1fbeb775c6.txt
docs/data/test-cases/: 1993f9eaf600b48.json  23f5783cafea1faf.json  27aa1f6b707cd0ec.json  426e5cb4deb05419.json  474fbc56ac56ee34.json  (+15 more)
docs/export/: influxDbData.txt  prometheusData.txt
docs/history/: duration-trend.json  history.json
docs/widgets/: behaviors.json  severity.json  status-chart.json  suites.json  summary.json
notifications/: telegram_slack_config.json
tests/API/: conftest.py  test_ostrovok_api.py
tests/Mobile/: config.py  conftest.py  test_ostrovok_android.py
tests/UI/: conftest.py  test_ostrovok_web_ui.py
utils/: attachments.py  base_session.py  file.py
utils/allure/: attach.py  attachments.py
utils/browserstack/: get.py
utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
(+13 files in other folders)
